# selfCheckSystem

./: README.md
selfCheckC++/: CMakeLists.txt  main copy.cpp  main1.cpp
selfCheckC++/src/: main.cpp
selfCheckC++/src/config/: DMatcher_plane.yaml  DMatcher_target.yaml  config.yaml  config_manager.cpp  config_manager.h  config_parser.cpp  config_parser.h  obj_loc_config.yaml  trans_config.yaml
selfCheckC++/src/network/: image_handler.cpp  image_handler.h  request_handler.cpp  request_handler.h
selfCheckC++/src/system/: system_check.cpp  system_check.h
selfCheckC++/src/types/: common_types.h
selfCheckC++/src/utils/: file_utils.cpp  file_utils.h  logger.cpp  logger.h
selfCheckVue/: .env.production  README.md  package-lock.json  package.json
selfCheckVue/src/: App.vue  main.ts
selfCheckVue/src/components/: CheckItem.vue  ConfigEditor.vue  ConfigItem.vue  ImageGallery.vue  LogModal.vue  ProgressBar.vue  ResultPanel.vue  TransitionExpand.vue
selfCheckVue/src/composables/: useConfig.ts  useSelfCheck.ts
selfCheckVue/src/stores/: useConfigStore.ts
selfCheckVue/src/types/: config.ts  selfCheck.ts
selfCheckVue/src/views/: ConfigView.vue  SelfCheckView.vue
